--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,5 +17,9 @@
       Nollaa
     </button>
   </form>
+  <form action="/set_value" method="POST">
+    <input type="text" name="value">
+    <button type="submit">aseta</button>
+  </form>
 </body>
 </html>
